#VESRION 0.8.1#

 - added function _autoloadClass2File() to autoload.php

 - fix methods isModule() and isController() from Peak_Core and removed the deprecated method getControllers()

 - application custom classes name prefix changed in autoload.php. 
   Old class name prefix : Application_..., New class name prefix : App_... 

 - fix a potential security threat in Peak_Exception constants messages.

 - fix a problem of uniformisation of $_SERVER['REQUEST_URI'] and $request_uri variables in Peak_Router::getRequestURI(). 

 - fix a problem with regex in Peak_Application_Modules. With this fix, modules can specifing theirs own regex.

 - added method deleteRegex() in Peak_Router.

 - renamed $_module_name and $_module_path, added methods getPath() and isInternal() in Peak_Application_Modules.

 - Peak_Application_Modules instance is now stored in Peak_Application::$module.

 - added method getName() to Peak_Application_Modules.

 - added classes Peak_Config_Ini and Peak_Config_Json.

 - visibility of $_vars from Peak_Config has been changed to protected to have the ability of extending the class.


#VERSION 0.8.0#

 - added constant ERR_CUSTOM to Peak_Exception

 - autoload.php > remove deprecated function _autoloadAppMod()

 - Peak_Zreflection > added methods getMethodsByInheritance() and getPropertiesByInheritance()

 - fixed Peak_View_Theme to throw new exception ERR_VIEW_THEME_NOT_FOUND when loading a theme folder that doesn't exists.

 - fixed rendering engines to throw exception with only filename instead of absolute path.

 - Peak_Exception > renamed ERR_VIEW_TPL_NOT_FOUND to ERR_VIEW_SCRIPT_NOT_FOUND and updated rendering engines.
                    
 - Peak_Exception > deprecated method getDebugtrace()

 - Peak_Exception > removed property $_trace. never used and we can achieved the same effect with parent class methods

 - Peak_Core > added set_exception_handler('pkexception') to handle all uncaught exceptions (try/catch block missing)
